--- a/TicketEase.csproj
+++ b/TicketEase.csproj
@@ -137,16 +137,7 @@
     <AndroidResource Include="Resources\drawable\cinema.JPG" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Cinema1.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Cinema2.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Cinema3.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Cinema4.xml" />
+    <AndroidResource Include="Resources\layout\Cinema.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
