validation to master

--- a/TicketEase.csproj
+++ b/TicketEase.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signup.cs" />
     <Compile Include="ViewCinema.cs" />
-    <Compile Include="ViewCinemaDetails.cs" />
+    <Compile Include="cinema.cs" />
     <Compile Include="viewfood.cs" />
     <Compile Include="viewmovies.cs" />
   </ItemGroup>
@@ -184,6 +184,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\cinema.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\cinema1.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
